5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/1330/executions/1715_3068.log
== SUBMITION (2019-05-02 17:17:44) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if(v1>10 or v1<1 or v2>10 or v2<1 or d<0 or a!="CIMITARRA" or a!="KATANA" or a!="SABRE"):
	PRINT("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
else:
	dano = (v1+v2) * d
	print(dano)

	
-- EXECUTION TIME:
0.168352
-- ERROR:
  File "/home/codebench/codes/1715/3068/main.py", line 14
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:17:47) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if(v1>10 or v1<1 or v2>10 or v2<1 or d<0 or a!="CIMITARRA" or a!="KATANA" or a!="SABRE"):
	PRINT("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
else:
	dano = (v1+v2) * d
	print(dano)

	
-- ERROR:
File "XXXX", line 14
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:17:54) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if(v1>10 or v1<1 or v2>10 or v2<1 or d<0 or a!="CIMITARRA" or a!="KATANA" or a!="SABRE"):
	PRINT("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
	dano = (v1+v2) * d
	print(dano)

	
-- EXECUTION TIME:
0.127612
-- ERROR:
  File "/home/codebench/codes/1715/3068/main.py", line 15
    dano = (v1+v2) * d
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:18:01) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if(v1>10 or v1<1 or v2>10 or v2<1 or d<0 or a!="CIMITARRA" or a!="KATANA" or a!="SABRE"):
	PRINT("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- EXECUTION TIME:
0.126032
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1715/3068/main.py", line 6, in <module>
    PRINT("Entrada invalida")
NameError: name 'PRINT' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:18:03) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if(v1>10 or v1<1 or v2>10 or v2<1 or d<0 or a!="CIMITARRA" or a!="KATANA" or a!="SABRE"):
	PRINT("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    PRINT("Entrada invalida")
NameError: name 'PRINT' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:18:21) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if(v1>10 or v1<1 or v2>10 or v2<1 or d<0 or a!="CIMITARRA" or a!="KATANA" or a!="SABRE"):
	print("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- EXECUTION TIME:
0.276449
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:18:22) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if(v1>10 or v1<1 or v2>10 or v2<1 or d<0 or a!="CIMITARRA" or a!="KATANA" or a!="SABRE"):
	print("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:19:24) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if(v1>10 or v1<1 or v2>10 or v2<1 or d<0 or a!="CIMITARRA" or a!="KATANA" or a!="SABRE"):
	print("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:19:54) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if(v1>10 or v1<1 or v2>10 or v2<1 or d<0 or a!="CIMITARRA" or a!="KATANA" or a!="SABRE"):
	print("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- EXECUTION TIME:
0.237022
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:20:48) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if((v1>10 or v1<1) or (v2>10 or v2<1) or (d<0) or (a!="CIMITARRA") or (a!="KATANA") or (a!="SABRE" )):
	print("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- EXECUTION TIME:
0.18786
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada invalida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:20:50) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if((v1>10 or v1<1) or (v2>10 or v2<1) or (d<0) or (a!="CIMITARRA") or (a!="KATANA") or (a!="SABRE" )):
	print("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:21:38) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if((v1>10 or v1<1) or (v2>10 or v2<1) or (d<0)):
	print("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:22:07) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())
if((v1>10 or v1<1) or (v2>10 or v2<1) or (d<0)):
	print("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = 2*(v1+v2) + 2*d
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)

	
-- EXECUTION TIME:
0.215873
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
30
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:36:58) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if((v1>10 or v1<1 or v>10 or v2<1) or (d<0)) or a!="CIMITARRA" or a!="KATANA" or a!="SABRE":
	print("Entrada invalida")
if(a=="CIMITARRA"):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA"):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a:
	dano = (v1+v2) * d
	print(dano)


	
-- ERROR:
File "XXXX", line 14
    elif(a:
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:37:05) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if((v1>10 or v1<1 or v>10 or v2<1) or (d<0)) or a!="CIMITARRA" or a!="KATANA" or a!="SABRE":
	print("Entrada invalida")
if(a=="CIMITARRA"):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA"):
	dano = 2*(v1+v2) + d
	print(dano)
else:
	dano = (v1+v2) * d
	print(dano)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if((v1>10 or v1<1 or v>10 or v2<1) or (d<0)) or a!="CIMITARRA" or a!="KATANA" or a!="SABRE":
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:37:35) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if((v1>10 or v1<1 or v2>10 or v2<1) or (d<0)) or a!="CIMITARRA" or a!="KATANA" or a!="SABRE":
	print("Entrada invalida")
if(a=="CIMITARRA"):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA"):
	dano = 2*(v1+v2) + d
	print(dano)
else:
	dano = (v1+v2) * d
	print(dano)


	
-- OUTPUT:
Entrada invalida
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:38:23) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if((v1>10 or v1<1 or v2>10 or v2<1) or (d<0)) or a!="CIMITARRA" or a!="KATANA" or a!="SABRE":
	print("Entrada invalida")
else:
	if(a=="CIMITARRA"):
		dano = (2*(v1+v2)) + (2*d)
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)


	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:39:30) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if((v1>10 or v1<1 or v2>10 or v2<1) or (d<0)) or a!="CIMITARRA" or a!="KATANA" or a!="SABRE":
	print("Entrada invalida")
else:
	if(a=="CIMITARRA" and v1<10 and v1>1 and v2>1 and v2<10 and d>0):
		dano = (2*(v1+v2)) + (2*d)
		print(dano)
	elif(a=="KATANA"):
		dano = 2*(v1+v2) + d
		print(dano)
	else:
		dano = (v1+v2) * d
		print(dano)


	
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:41:48) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<10 and v1>1 and v2>1 and v2<10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavlida")

	
-- OUTPUT:
Entrada inavlida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:41:59) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<10 and v1>1 and v2>1 and v2<10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavlida")

	
-- EXECUTION TIME:
0.187226
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada inavlida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada inavlida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:42:01) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<10 and v1>1 and v2>1 and v2<10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavlida")

	
-- EXECUTION TIME:
0.166042
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
Entrada inavlida
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada inavlida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:42:01) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<10 and v1>1 and v2>1 and v2<10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavlida")

	
-- OUTPUT:
Entrada inavlida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:42:21) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<10 and v1>1 and v2>1 and v2<10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavlida")

	
-- OUTPUT:
Entrada inavlida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:43:01) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<10 and v1>1 and v2>1 and v2<10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<10 and v1>1 and v2<10 and v2>1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- OUTPUT:
Entrada inavalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:44:44) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:45:00) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- EXECUTION TIME:
0.282068
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
30
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada inavalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:45:01) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- EXECUTION TIME:
0.195179
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
30
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada inavalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:45:02) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- EXECUTION TIME:
0.182606
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
30
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:45:02) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- EXECUTION TIME:
0.250208
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
30
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
20
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:45:02) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- EXECUTION TIME:
0.308456
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
30
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada inavalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:45:03) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- EXECUTION TIME:
0.569986
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
20
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada inavalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:45:03) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- EXECUTION TIME:
0.610139
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
20
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada inavalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada inavalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:45:03) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada inavalida")

	
-- EXECUTION TIME:
0.854018
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
20
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
Entrada inavalida
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:47:39) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada invalida")

	
-- EXECUTION TIME:
0.220525
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
30
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:47:41) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) * d
	print(dano)
else:
	print("Entrada invalida")

	
-- OUTPUT:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 17:48:49) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) + 2*d
	print(dano)
else:
	print("Entrada invalida")

	
-- OUTPUT:
23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 17:49:02) 
-- CODE:
a = input()
d = int(input())
v1 = int(input())
v2 = int(input())

if(a=="CIMITARRA" and v1<=10 and v1>=1 and v2>=1 and v2<=10 and d>=0):
	dano = (2*(v1+v2)) + (2*d)
	print(dano)
elif(a=="KATANA" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = 2*(v1+v2) + d
	print(dano)
elif(a=="SABRE" and v1<=10 and v1>=1 and v2<=10 and v2>=1 and d>=0):
	dano = (v1+v2) + 2*d
	print(dano)
else:
	print("Entrada invalida")

	
-- EXECUTION TIME:
0.188902
-- TEST CASE 1:
---- input:
SABRE
10
1
2
---- correct output:
23
---- user output:
23
-- TEST CASE 2:
---- input:
CIMITARRA
2
5
3
---- correct output:
20
---- user output:
20
-- TEST CASE 3:
---- input:
KATANA
10
11
10
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
